--- a/portfolio.html
+++ b/portfolio.html
@@ -89,13 +89,23 @@
           <ul class="projects list">
             <li class="item">
               <a href="" class="decoration">
-                <img
-                  class="img"
-                  src="./images/portfolio.images/img-1.jpg"
-                  alt="Технокряк"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    class="img"
+                    src="./images/portfolio.images/img-1.jpg"
+                    alt="Технокряк"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="actions">
+                    <p class="actions-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="content">
                   <h2 class="title">Технокряк</h2>
                   <p class="text">Веб-сайт</p>
@@ -105,13 +115,23 @@
 
             <li class="item">
               <a href="" class="decoration">
-                <img
-                  class="img"
-                  src="./images/portfolio.images/img-2.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    class="img"
+                    src="./images/portfolio.images/img-2.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="actions">
+                    <p class="actions-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="content">
                   <h2 class="title">Постер New Orlean vs Golden Star</h2>
                   <p class="text">Дизайн</p>
@@ -121,13 +141,23 @@
 
             <li class="item">
               <a href="" class="decoration">
-                <img
-                  class="img"
-                  src="./images/portfolio.images/img-3.jpg"
-                  alt="Ресторан Seafood"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    class="img"
+                    src="./images/portfolio.images/img-3.jpg"
+                    alt="Ресторан Seafood"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="actions">
+                    <p class="actions-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="content">
                   <h2 class="title">Ресторан Seafood</h2>
                   <p class="text">Приложение</p>
@@ -137,13 +167,23 @@
 
             <li class="item">
               <a href="" class="decoration">
-                <img
-                  class="img"
-                  src="./images/portfolio.images/img-4.jpg"
-                  alt="Проект Prime"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    class="img"
+                    src="./images/portfolio.images/img-4.jpg"
+                    alt="Проект Prime"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="actions">
+                    <p class="actions-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="content">
                   <h2 class="title">Проект Prime</h2>
                   <p class="text">Маркетинг</p>
@@ -153,13 +193,23 @@
 
             <li class="item">
               <a href="" class="decoration">
-                <img
-                  class="img"
-                  src="./images/portfolio.images/img-5.jpg"
-                  alt="Проект Boxes"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    class="img"
+                    src="./images/portfolio.images/img-5.jpg"
+                    alt="Проект Boxes"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="actions">
+                    <p class="actions-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="content">
                   <h2 class="title">Проект Boxes</h2>
                   <p class="text">Приложение</p>
@@ -169,13 +219,24 @@
 
             <li class="item">
               <a href="" class="decoration">
-                <img
-                  class="img"
-                  src="./images/portfolio.images/img-6.jpg"
-                  alt="Inspiration has no Borders"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    class="img"
+                    src="./images/portfolio.images/img-6.jpg"
+                    alt="Inspiration has no Borders"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="actions">
+                    <p class="actions-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="content">
                   <h2 class="title">Inspiration has no Borders</h2>
                   <p class="text">Веб-сайт</p>
@@ -185,13 +246,23 @@
 
             <li class="item">
               <a href="" class="decoration">
-                <img
-                  class="img"
-                  src="./images/portfolio.images/img-7.jpg"
-                  alt="Издание Limited Edition"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    class="img"
+                    src="./images/portfolio.images/img-7.jpg"
+                    alt="Издание Limited Edition"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="actions">
+                    <p class="actions-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="content">
                   <h2 class="title">Издание Limited Edition</h2>
                   <p class="text">Дизайн</p>
@@ -201,13 +272,23 @@
 
             <li class="item">
               <a href="" class="decoration">
-                <img
-                  class="img"
-                  src="./images/portfolio.images/img-8.jpg"
-                  alt="Проект LAB"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    class="img"
+                    src="./images/portfolio.images/img-8.jpg"
+                    alt="Проект LAB"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="actions">
+                    <p class="actions-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="content">
                   <h2 class="title">Проект LAB</h2>
                   <p class="text">Маркетинг</p>
@@ -217,13 +298,23 @@
 
             <li class="item">
               <a href="" class="decoration">
-                <img
-                  class="img"
-                  src="./images/portfolio.images/img-9.jpg"
-                  alt="Growing Business"
-                  width="370"
-                  height="294"
-                />
+                <div class="thumb">
+                  <img
+                    class="img"
+                    src="./images/portfolio.images/img-9.jpg"
+                    alt="Growing Business"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="actions">
+                    <p class="actions-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="content">
                   <h2 class="title">Growing Business</h2>
                   <p class="text">Приложение</p>
