--- a/index.html
+++ b/index.html
@@ -69,7 +69,21 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="hero-button">Заказать услугу</button>
+          <button type="button" class="hero-button" data-modal-open>
+            Заказать услугу
+          </button>
+
+          <!-- -------MODAL-------- -->
+
+          <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+              <button class="modal-button" data-modal-close>
+                <svg class="modal-icon" width="11" height="11">
+                  <use href="./images/icons.svg/sprite.svg#icon-modal"></use>
+                </svg>
+              </button>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -140,28 +154,37 @@
 
           <ul class="list-works list">
             <li class="item">
-              <img
-                src="./images/studio.images/works/site-development.jpg"
-                alt="site development"
-                width="370"
-                height="294"
-              />
+              <div class="works-thumb">
+                <img
+                  src="./images/studio.images/works/site-development.jpg"
+                  alt="site development"
+                  width="370"
+                  height="294"
+                />
+                <p class="works-text">Десктопные приложения</p>
+              </div>
             </li>
             <li class="item">
-              <img
-                src="./images/studio.images/works/mobile-development.jpg"
-                alt="mobile development"
-                width="370"
-                height="294"
-              />
+              <div class="works-thumb">
+                <img
+                  src="./images/studio.images/works/mobile-development.jpg"
+                  alt="mobile development"
+                  width="370"
+                  height="294"
+                />
+                <p class="works-text">Мобильные приложения</p>
+              </div>
             </li>
             <li class="item">
-              <img
-                src="./images/studio.images/works/styles-and-colors.jpg"
-                alt="styles and colors"
-                width="370"
-                height="294"
-              />
+              <div class="works-thumb">
+                <img
+                  src="./images/studio.images/works/styles-and-colors.jpg"
+                  alt="styles and colors"
+                  width="370"
+                  height="294"
+                />
+                <p class="works-text">Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -512,5 +535,6 @@
         </div>
       </div>
     </footer>
+    <script src="./modal.js"></script>
   </body>
 </html>
